# neuroflow

./: .gitignore  COMMIT_SUMMARY_v0.5.0.md  Dockerfile  GITHUB_COMMIT_SUCCESS.md  GITHUB_SETUP_GUIDE.md  GIT_COMMIT_REPORT_v0.5.0.md  INSTALL_COMPLETE.md  MEMORY_SERVICE_STANDALONE.md  Makefile  README.md  整理文档.sh
benchmarks/: performance_benchmarks.py  run_benchmarks.py
config/: neuroflow.toml  otel-collector-config.yaml  prometheus.yml
docs/: CLI_GUIDE.md  (+41 more)
kernel/: .gitignore  Cargo.toml  build.rs
kernel/benches/: performance.rs
kernel/src/: lib.rs  main.rs  main_minimal.rs  stability_test.rs
kernel/src/a2a/: mod.rs
kernel/src/cli/: mod.rs
kernel/src/config/: enhanced.rs  enhanced_manager.rs  mod.rs  simple.rs
kernel/src/debug/: mod.rs
kernel/src/docs/: mod.rs
kernel/src/gateway/: mod.rs
kernel/src/grpc/: memory_http_service.rs  memory_service.rs  mod.rs  service.rs
kernel/src/hot_reload/: engine.rs  enhanced_engine.rs  mod.rs
kernel/src/knowledge/: mod.rs
kernel/src/mcp/: mod.rs
kernel/src/memory/: mod.rs
kernel/src/middleware/: mod.rs  security.rs
kernel/src/observability/: demo.rs  enhanced_tracing.rs  metrics.rs  mod.rs  service.rs  simple.rs  tracer.rs
kernel/src/observability/monitoring/: mod.rs  service.rs
kernel/src/proto/: mod.rs
kernel/src/routing/: enhanced_model_loader.rs  mod.rs  model_loader.rs  routing_strategy.rs  semantic_router.rs  vector_index.rs
kernel/src/runtime/: mod.rs
kernel/src/sandbox/: isolation.rs  mod.rs  namespace.rs  wasm.rs
kernel/src/sandbox/enhanced/: mod.rs  pool.rs
kernel/src/sandbox/python/: manager.rs  mod.rs  process.rs
kernel/src/security/: guard.rs  mod.rs  test_validation.rs
kernel/src/skills/: mod.rs
kernel/src/testing/: automation.rs  mod.rs  security.rs  stress.rs
kernel/src/tool_router/: executor.rs  mod.rs  registry.rs
kernel/src/utils/: error.rs  logging.rs  mod.rs
kernel/tests/: test_tool_router.rs
memory-service/: Cargo.toml
memory-service/src/: main.rs
(+234 files in other folders)
