[package]
name = "kernel"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tonic = "0.10"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.6", features = ["v4"] }
bytes = "1.5"
opentelemetry = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
prometheus = "0.14.0"
hyper = "1.8.1"
tower-http = "0.4"
http-body-util = "0.1.3"
sha2 = "0.10"
tempfile = "3.8"
regex = "1.10"
lazy_static = "1.4"
url = "2.5"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
rand = "0.8"
libc = "0.2"  # For resource limits
futures = "0.3"
nix = { version = "0.27", features = ["sched", "mount", "user"] }
# caps = "0.5"  # Temporarily disabled due to compilation issues
# Additional dependencies for Phase 2
notify = "6.1"
ndarray = "0.15"
# Additional dependencies for Memory & Knowledge
actix-web = "4"
env_logger = "0.10"
fastrand = "2.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[build-dependencies]
tonic-build = "0.10"

[[bench]]
name = "performance"
harness = false